k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80           # The port that will be exposed
      targetPort: 80     # The port on the container
  selector:
    app: my-app
